# swproject

./: CMakeLists.txt  Main.qml  SearchPage.qml  StartPage.qml  main.cpp
connection/: client.cpp  client.h
game/: Effect.qml  GamePage.qml  Tile.qml  tilecontrol.cpp  tilecontrol.h
